[gd_scene load_steps=5 format=3 uid="uid://d2hbtnntebmmv"]

[ext_resource type="PackedScene" uid="uid://bmw2bd3wnlihg" path="res://scenes/menu.tscn" id="1_5nhhh"]
[ext_resource type="Script" path="res://scenes/scripts/main.gd" id="1_bk7ta"]
[ext_resource type="PackedScene" uid="uid://cv3r6yrm7v50l" path="res://scenes/shop.tscn" id="3_gnlvo"]
[ext_resource type="PackedScene" uid="uid://c8we5xh6j8dc7" path="res://levels/level_spawn/level_spawb.tscn" id="4_hf5vf"]

[node name="Main" type="Node" groups=["box"]]
script = ExtResource("1_bk7ta")

[node name="Level" parent="." instance=ExtResource("4_hf5vf")]

[node name="Shop" parent="." instance=ExtResource("3_gnlvo")]
visible = false

[node name="Menu" parent="." instance=ExtResource("1_5nhhh")]

[connection signal="sgnl_player_died" from="Level" to="." method="_on_level_sgnl_player_died"]
[connection signal="buy_hover" from="Shop" to="." method="_on_shop_buy_hover"]
[connection signal="buy_jumps" from="Shop" to="." method="_on_shop_buy_jumps"]
[connection signal="exit_shop" from="Shop" to="." method="_on_exit_shop"]
[connection signal="play" from="Menu" to="." method="_on_menu_play"]
[connection signal="shop" from="Menu" to="." method="_on_menu_shop"]
